<resources>
    <string name="app_name">Compatible Roommates Finder</string>
    <string name="insert_email">Email</string>
    <string name="insert_password">Password</string>
    <string name="insert_name">Full Name</string>
    <string name="login_name">Login</string>
    <string name="register_name">Register</string>
    <string name="next">Next</string>
    <string name="insert_personality_type">Personality Type</string>
    <string name="logout_name">Logout</string>
    <string name="submit_name">Submit</string>
    <string name="insert_graduationYear">Graduation Year</string>
    <string name="update_hint">Update your profile information below!</string>
    <string name="update_profileTitle">UPDATE PROFILE</string>
    <string name="update_morning">Are you a morning person?</string>
    <string name="update_music">Do you like to play music while studying?</string>
    <string name="update_smoker">Are you a smoker?</string>
    <string name="update_friends">Do you like having friends visit your room?</string>
    <string name="update_clean">Do you keep your room clean?</string>
    <string name="back">BACK</string>

</resources>