<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/title"
        android:layout_width="412dp"
        android:layout_height="128dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#918686"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        android:textColor="#918686"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="407dp"
        android:layout_height="70dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/insert_password"
        android:inputType="textPassword"
        android:textColor="#918686"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/register_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGraduation"
        app:layout_constraintVertical_bias="0.194" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="409dp"
        android:layout_height="74dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/insert_name"
        android:inputType="textPersonName"
        android:textColor="#918686"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/editTextGraduation"
        android:layout_width="408dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/insert_graduationYear"
        android:textColor="#918686"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>