<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update">


    <Button
        android:id="@+id/nextButton"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBio"
        app:layout_constraintVertical_bias="0.913" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="409dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/insert_name"
        android:inputType="textPersonName"
        android:textColor="#918686"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <EditText
        android:id="@+id/editTextGraduation"
        android:layout_width="407dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/insert_graduationYear"
        android:inputType="date"
        android:textColor="#918686"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="411dp"
        android:layout_height="41dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="8dp"
        android:text="@string/update_hint"
        android:textAlignment="center"
        android:textColor="#918686"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2Button" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_name"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextBio"
        android:layout_width="408dp"
        android:layout_height="196dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Bio"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="100"
        android:textColor="#918686"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGraduation"
        app:layout_constraintVertical_bias="0.021" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="381dp"
        android:layout_height="102dp"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/image2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="161dp"
        android:text="Select Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>